fix spacing for event overlay + undesaturate backdrop blur

--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -1938,7 +1938,7 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
 
 /* RECORDING BETA */
 ._20ZzHxTmtWU8kWGA6YqWfa {
-  backdrop-filter: blur(5px) opacity(100%) saturate(0) brightness(0.5) !important;
+  backdrop-filter: blur(5px) opacity(100%) saturate(1) brightness(0.5) !important;
 }
 
 ._1TV2TLk7RNa3PqD1_WKqfs {
